implemented Duplicate MST...